--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/SANSRunWindow.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>713</width>
-    <height>415</height>
+    <width>716</width>
+    <height>443</height>
    </rect>
   </property>
   <property name="sizePolicy" >
@@ -73,8 +73,8 @@
       <attribute name="title" >
        <string>Run Numbers</string>
       </attribute>
-      <layout class="QVBoxLayout" name="verticalLayout_4" >
-       <item>
+      <layout class="QGridLayout" name="gridLayout_21" >
+       <item row="0" column="0" colspan="2" >
         <layout class="QHBoxLayout" name="horizontalLayout_12" >
          <item>
           <widget class="QLabel" name="label_7" >
@@ -190,7 +190,7 @@
          </item>
         </layout>
        </item>
-       <item>
+       <item row="1" column="0" colspan="2" >
         <layout class="QHBoxLayout" name="horizontalLayout_8" >
          <item>
           <widget class="QRadioButton" name="single_mode_btn" >
@@ -225,16 +225,122 @@
            </property>
           </spacer>
          </item>
+         <item>
+          <widget class="QGroupBox" name="groupBox_12" >
+           <property name="title" >
+            <string/>
+           </property>
+           <property name="flat" >
+            <bool>false</bool>
+           </property>
+           <layout class="QHBoxLayout" name="horizontalLayout_16" >
+            <item>
+             <widget class="QLabel" name="label_34" >
+              <property name="text" >
+               <string>Instrument:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="inst_opt" >
+              <item>
+               <property name="text" >
+                <string>LOQ</string>
+               </property>
+              </item>
+              <item>
+               <property name="text" >
+                <string>SANS2D</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item>
+             <widget class="QLabel" name="label_26" >
+              <property name="text" >
+               <string>File type:</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QComboBox" name="file_opt" />
+            </item>
+           </layout>
+          </widget>
+         </item>
         </layout>
        </item>
-       <item>
+       <item row="4" column="0" >
+        <widget class="QGroupBox" name="groupBox_4" >
+         <property name="title" >
+          <string>Options</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_20" >
+          <item row="0" column="1" >
+           <widget class="QCheckBox" name="verbose_check" >
+            <property name="text" >
+             <string>Verbose</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2" >
+           <widget class="QCheckBox" name="log_colette" >
+            <property name="text" >
+             <string>Log Colette cmds</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0" >
+           <widget class="QCheckBox" name="plot_check" >
+            <property name="text" >
+             <string>Plot result</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="5" column="0" >
+        <widget class="QGroupBox" name="groupBox_7" >
+         <property name="title" >
+          <string>Reduce</string>
+         </property>
+         <property name="flat" >
+          <bool>false</bool>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_19" >
+          <item row="0" column="0" >
+           <widget class="QPushButton" name="load_dataBtn" >
+            <property name="text" >
+             <string>Load Data</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" >
+           <widget class="QPushButton" name="oneDBtn" >
+            <property name="text" >
+             <string>1D Reduce</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2" >
+           <widget class="QPushButton" name="twoDBtn" >
+            <property name="text" >
+             <string>2D Reduce</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="2" column="0" colspan="2" >
         <widget class="Line" name="line_2" >
          <property name="orientation" >
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
-       <item>
+       <item row="3" column="0" colspan="2" >
         <widget class="QStackedWidget" name="mode_stack" >
          <property name="currentIndex" >
           <number>1</number>
@@ -927,179 +1033,119 @@
          </widget>
         </widget>
        </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_10" >
-         <item>
-          <widget class="QGroupBox" name="groupBox_4" >
-           <property name="title" >
-            <string>Options</string>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_2" >
-            <property name="topMargin" >
-             <number>2</number>
+       <item rowspan="2" row="4" column="1" >
+        <widget class="QGroupBox" name="groupBox_5" >
+         <property name="title" >
+          <string>Save</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout" >
+          <item rowspan="2" row="0" column="4" >
+           <widget class="QPushButton" name="saveFilename_btn" >
+            <property name="minimumSize" >
+             <size>
+              <width>0</width>
+              <height>0</height>
+             </size>
             </property>
-            <item>
-             <widget class="QCheckBox" name="plot_check" >
-              <property name="text" >
-               <string>Plot result</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QCheckBox" name="verbose_check" >
-              <property name="text" >
-               <string>Verbose</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QCheckBox" name="log_colette" >
-              <property name="text" >
-               <string>Log Colette cmds</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_4" >
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0" >
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <spacer name="verticalSpacer_5" >
-         <property name="orientation" >
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0" >
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_15" >
-         <property name="spacing" >
-          <number>6</number>
-         </property>
-         <property name="topMargin" >
-          <number>0</number>
-         </property>
-         <item>
-          <widget class="QGroupBox" name="groupBox_7" >
-           <property name="title" >
-            <string>Reduce</string>
-           </property>
-           <property name="flat" >
-            <bool>false</bool>
-           </property>
-           <layout class="QGridLayout" name="gridLayout" >
-            <item row="0" column="0" >
-             <widget class="QPushButton" name="load_dataBtn" >
-              <property name="text" >
-               <string>Load Data</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1" colspan="2" >
-             <widget class="QPushButton" name="oneDBtn" >
-              <property name="text" >
-               <string>1D Reduce</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3" >
-             <widget class="QPushButton" name="twoDBtn" >
-              <property name="text" >
-               <string>2D Reduce</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="4" >
-             <widget class="QPushButton" name="saveBtn" >
-              <property name="text" >
-               <string>Save</string>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_8" >
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0" >
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QGroupBox" name="groupBox_12" >
-           <property name="title" >
-            <string/>
-           </property>
-           <property name="flat" >
-            <bool>false</bool>
-           </property>
-           <layout class="QHBoxLayout" name="horizontalLayout_16" >
-            <item>
-             <widget class="QLabel" name="label_34" >
-              <property name="text" >
-               <string>Instrument:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="inst_opt" >
-              <item>
-               <property name="text" >
-                <string>LOQ</string>
-               </property>
-              </item>
-              <item>
-               <property name="text" >
-                <string>SANS2D</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="label_26" >
-              <property name="text" >
-               <string>File type:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="file_opt" />
-            </item>
-           </layout>
-          </widget>
-         </item>
-        </layout>
+            <property name="toolTip" >
+             <string>Save the output workspace to this file</string>
+            </property>
+            <property name="text" >
+             <string>Browse</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="4" >
+           <widget class="QCheckBox" name="saveCSV_check" >
+            <property name="toolTip" >
+             <string>Select one or more file formats</string>
+            </property>
+            <property name="text" >
+             <string>CSV</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="3" >
+           <widget class="QCheckBox" name="saveRKH_check" >
+            <property name="toolTip" >
+             <string>Select one or more file formats</string>
+            </property>
+            <property name="text" >
+             <string>RKH</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="2" >
+           <widget class="QCheckBox" name="saveCan_check" >
+            <property name="toolTip" >
+             <string>Select one or more file formats</string>
+            </property>
+            <property name="text" >
+             <string>CanSAS</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1" >
+           <widget class="QCheckBox" name="saveNex_check" >
+            <property name="toolTip" >
+             <string>Select one or more file formats</string>
+            </property>
+            <property name="text" >
+             <string>Nexus</string>
+            </property>
+           </widget>
+          </item>
+          <item rowspan="2" row="0" column="0" >
+           <widget class="QLabel" name="label_58" >
+            <property name="toolTip" >
+             <string>Save the output workspace to this file</string>
+            </property>
+            <property name="text" >
+             <string>Filename:</string>
+            </property>
+           </widget>
+          </item>
+          <item rowspan="2" row="2" column="0" >
+           <widget class="QLabel" name="label_64" >
+            <property name="toolTip" >
+             <string>Select one or more file formats</string>
+            </property>
+            <property name="text" >
+             <string>Formats:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1" colspan="2" >
+           <widget class="QPushButton" name="saveDefault_btn" >
+            <property name="toolTip" >
+             <string>Save the workspace from a single run file reduction</string>
+            </property>
+            <property name="text" >
+             <string>Save Result</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" colspan="3" >
+           <widget class="QLineEdit" name="outfile_edit" >
+            <property name="toolTip" >
+             <string>Save the output workspace to this file</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="3" colspan="2" >
+           <widget class="QPushButton" name="saveSel_btn" >
+            <property name="toolTip" >
+             <string>Save multiple workspaces</string>
+            </property>
+            <property name="text" >
+             <string>Save Other</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
        </item>
       </layout>
-      <zorder>line_2</zorder>
-      <zorder>mode_stack</zorder>
-      <zorder></zorder>
      </widget>
      <widget class="QWidget" name="tab_2" >
       <attribute name="title" >
