--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
@@ -548,6 +548,9 @@
                 <property name="text" >
                  <string>Monitor Efficiency</string>
                 </property>
+                <property name="checked" >
+                 <bool>true</bool>
+                </property>
                </widget>
               </item>
               <item row="0" column="6" >
@@ -1041,9 +1044,9 @@
               <item row="3" column="1" >
                <layout class="QHBoxLayout" name="horizontalLayout_12" >
                 <item>
-                 <widget class="QCheckBox" name="rebin_ckAutoRebin" >
+                 <widget class="QCheckBox" name="rebin_ckDNR" >
                   <property name="text" >
-                   <string>Auto Rebin</string>
+                   <string>Do Not Rebin</string>
                   </property>
                   <property name="checked" >
                    <bool>true</bool>
