Converted Homer to use the new run file widget from within its designer UI form. Re #1401

--- a/Code/qtiplot/MantidQt/MantidWidgets/inc/MWRunFiles.ui
+++ b/Code/qtiplot/MantidQt/MantidWidgets/inc/MWRunFiles.ui
@@ -95,7 +95,7 @@
    <item row="0" column="0" >
     <widget class="QLabel" name="textLabel" >
      <property name="text" >
-      <string>Files</string>
+      <string>TextLabel</string>
      </property>
     </widget>
    </item>
