--- a/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
+++ b/Code/qtiplot/MantidQt/CustomInterfaces/inc/ConvertToEnergy.ui
@@ -13,6 +13,9 @@
    <string>Convert To Energy</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_20" >
+   <property name="topMargin" >
+    <number>9</number>
+   </property>
    <item>
     <widget class="QTabWidget" name="tabWidget" >
      <property name="styleSheet" >
@@ -162,9 +165,25 @@
              <number>0</number>
             </property>
             <widget class="QWidget" name="page_3" >
-             <layout class="QGridLayout" name="gridLayout" >
-              <item row="1" column="0" >
+             <layout class="QVBoxLayout" name="verticalLayout_32" >
+              <item>
                <layout class="QHBoxLayout" name="runFilesLay" >
+                <property name="spacing" >
+                 <number>9</number>
+                </property>
+                <property name="topMargin" >
+                 <number>9</number>
+                </property>
+                <property name="bottomMargin" >
+                 <number>6</number>
+                </property>
+                <item>
+                 <widget class="MantidQt::MantidWidgets::MWRunFiles" name="runFiles" >
+                  <property name="label" stdset="0" >
+                   <string>Runs          </string>
+                  </property>
+                 </widget>
+                </item>
                 <item>
                  <widget class="QCheckBox" name="ckSumSpecs" >
                   <property name="text" >
@@ -174,73 +193,31 @@
                 </item>
                </layout>
               </item>
-              <item row="2" column="0" >
-               <layout class="QHBoxLayout" name="horizontalLayout_1" >
-                <item>
-                 <widget class="QLabel" name="label_3" >
-                  <property name="text" >
-                   <string>Map File</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QLineEdit" name="map_fileInput_leName" />
-                </item>
-                <item>
-                 <widget class="QLabel" name="valMap" >
-                  <property name="palette" >
-                   <palette>
-                    <active>
-                     <colorrole role="WindowText" >
-                      <brush brushstyle="SolidPattern" >
-                       <color alpha="255" >
-                        <red>170</red>
-                        <green>0</green>
-                        <blue>0</blue>
-                       </color>
-                      </brush>
-                     </colorrole>
-                    </active>
-                    <inactive>
-                     <colorrole role="WindowText" >
-                      <brush brushstyle="SolidPattern" >
-                       <color alpha="255" >
-                        <red>170</red>
-                        <green>0</green>
-                        <blue>0</blue>
-                       </color>
-                      </brush>
-                     </colorrole>
-                    </inactive>
-                    <disabled>
-                     <colorrole role="WindowText" >
-                      <brush brushstyle="SolidPattern" >
-                       <color alpha="255" >
-                        <red>118</red>
-                        <green>116</green>
-                        <blue>108</blue>
-                       </color>
-                      </brush>
-                     </colorrole>
-                    </disabled>
-                   </palette>
-                  </property>
-                  <property name="text" >
-                   <string>*</string>
-                  </property>
-                 </widget>
-                </item>
-                <item>
-                 <widget class="QPushButton" name="map_fileInput_pbBrowse" >
-                  <property name="text" >
-                   <string>Browse</string>
-                  </property>
-                 </widget>
-                </item>
-               </layout>
+              <item>
+               <widget class="MantidQt::MantidWidgets::MWRunFiles" name="mapFile" >
+                <property name="findRunFiles" stdset="0" >
+                 <bool>false</bool>
+                </property>
+                <property name="label" stdset="0" >
+                 <string>Map File     </string>
+                </property>
+                <property name="multipleFiles" stdset="0" >
+                 <bool>false</bool>
+                </property>
+                <property name="algorithmAndProperty" stdset="0" >
+                 <string>GroupDetectors|MapFile</string>
+                </property>
+               </widget>
               </item>
-              <item row="4" column="0" >
-               <layout class="QHBoxLayout" name="whiteFileLay" />
+              <item>
+               <widget class="MantidQt::MantidWidgets::MWRunFiles" name="whiteBeamFile" >
+                <property name="label" stdset="0" >
+                 <string>White beam</string>
+                </property>
+                <property name="multipleFiles" stdset="0" >
+                 <bool>false</bool>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -566,35 +543,6 @@
             </property>
             <widget class="QWidget" name="page_5" >
              <layout class="QGridLayout" name="gridLayout_4" >
-              <item row="1" column="3" >
-               <widget class="QSplitter" name="splitter" >
-                <property name="orientation" >
-                 <enum>Qt::Horizontal</enum>
-                </property>
-                <widget class="QLabel" name="label_8" >
-                 <property name="text" >
-                  <string>Normalise By</string>
-                 </property>
-                </widget>
-                <widget class="QComboBox" name="cbNormal" >
-                 <item>
-                  <property name="text" >
-                   <string>monitor-1</string>
-                  </property>
-                 </item>
-                 <item>
-                  <property name="text" >
-                   <string>current</string>
-                  </property>
-                 </item>
-                 <item>
-                  <property name="text" >
-                   <string>none</string>
-                  </property>
-                 </item>
-                </widget>
-               </widget>
-              </item>
               <item row="1" column="1" >
                <widget class="QPushButton" name="pbBack" >
                 <property name="text" >
@@ -615,7 +563,7 @@
                 </property>
                </spacer>
               </item>
-              <item row="1" column="4" >
+              <item row="1" column="5" >
                <spacer name="horizontalSpacer_6" >
                 <property name="orientation" >
                  <enum>Qt::Horizontal</enum>
@@ -640,6 +588,35 @@
                  </size>
                 </property>
                </spacer>
+              </item>
+              <item row="1" column="3" >
+               <widget class="QLabel" name="label" >
+                <property name="text" >
+                 <string>Normalise By</string>
+                </property>
+               </widget>
+              </item>
+              <item row="1" column="4" >
+               <widget class="QComboBox" name="cbNormal" >
+                <property name="frame" >
+                 <bool>true</bool>
+                </property>
+                <item>
+                 <property name="text" >
+                  <string>monitor-1</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>current</string>
+                 </property>
+                </item>
+                <item>
+                 <property name="text" >
+                  <string>none</string>
+                 </property>
+                </item>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -2400,30 +2377,34 @@ p, li { white-space: pre-wrap; }
          <property name="title" >
           <string>Run Files</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout_16" >
-          <item row="1" column="1" >
-           <widget class="QLineEdit" name="leVanMap" />
-          </item>
-          <item row="1" column="2" >
-           <widget class="QPushButton" name="pbAbsMapFileBrowse" >
-            <property name="enabled" >
-             <bool>true</bool>
-            </property>
-            <property name="text" >
-             <string>Browse</string>
+         <layout class="QVBoxLayout" name="verticalLayout_31" >
+          <item>
+           <widget class="MantidQt::MantidWidgets::MWRunFiles" name="absRunFiles" >
+            <property name="label" stdset="0" >
+             <string>Mono Van</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="1" >
-           <widget class="QLineEdit" name="leAbsWhiteFile" />
+          <item>
+           <widget class="MantidQt::MantidWidgets::MWRunFiles" name="absMapFile" >
+            <property name="findRunFiles" stdset="0" >
+             <bool>false</bool>
+            </property>
+            <property name="label" stdset="0" >
+             <string>Map File  </string>
+            </property>
+            <property name="multipleFiles" stdset="0" >
+             <bool>false</bool>
+            </property>
+           </widget>
           </item>
-          <item row="0" column="1" >
-           <widget class="QLineEdit" name="leAbsMonoFiles" />
-          </item>
-          <item row="1" column="0" >
-           <widget class="QLabel" name="label_28" >
-            <property name="text" >
-             <string>Map File</string>
+          <item>
+           <widget class="MantidQt::MantidWidgets::MWRunFiles" name="absWhiteFile" >
+            <property name="label" stdset="0" >
+             <string>White Beam</string>
+            </property>
+            <property name="multipleFiles" stdset="0" >
+             <bool>false</bool>
             </property>
            </widget>
           </item>
@@ -2794,26 +2775,33 @@ p, li { white-space: pre-wrap; }
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MantidQt::MantidWidgets::MWRunFiles</class>
+   <extends>QWidget</extends>
+   <header>MantidQtMantidWidgets/MWRunFiles.h</header>
+  </customwidget>
+ </customwidgets>
  <tabstops>
   <tabstop>tabWidget</tabstop>
-  <tabstop>cbInst</tabstop>
-  <tabstop>cbAnalyser</tabstop>
-  <tabstop>cbReflection</tabstop>
-  <tabstop>leRunFiles</tabstop>
-  <tabstop>pbRunFilesBrowse</tabstop>
-  <tabstop>ckSumFiles</tabstop>
-  <tabstop>leCalibrationFile</tabstop>
-  <tabstop>pbCalibrationFilesBrowse</tabstop>
-  <tabstop>ckUseCalib</tabstop>
-  <tabstop>cbMappingOptions</tabstop>
-  <tabstop>leNoGroups</tabstop>
-  <tabstop>leMappingFile</tabstop>
-  <tabstop>pbMappingFileBrowse</tabstop>
-  <tabstop>pbBack_2</tabstop>
-  <tabstop>pbPlotRaw</tabstop>
-  <tabstop>ckMonEff</tabstop>
-  <tabstop>ckDetailedBalance</tabstop>
-  <tabstop>leDetailedBalance</tabstop>
+  <tabstop>loadRun_cbInst</tabstop>
+  <tabstop>runFiles</tabstop>
+  <tabstop>ckSumSpecs</tabstop>
+  <tabstop>mapFile</tabstop>
+  <tabstop>whiteBeamFile</tabstop>
+  <tabstop>pbBack</tabstop>
+  <tabstop>cbNormal</tabstop>
+  <tabstop>leEGuess</tabstop>
+  <tabstop>ckFixEi</tabstop>
+  <tabstop>leELow</tabstop>
+  <tabstop>leEWidth</tabstop>
+  <tabstop>leEHigh</tabstop>
+  <tabstop>leNameSPE</tabstop>
+  <tabstop>pbBrowseSPE</tabstop>
+  <tabstop>save_ckSPE</tabstop>
+  <tabstop>save_ckNexus</tabstop>
+  <tabstop>pbRun</tabstop>
+  <tabstop>pbHelp</tabstop>
   <tabstop>leEfixed</tabstop>
   <tabstop>leSpectraMin</tabstop>
   <tabstop>leSpectraMax</tabstop>
@@ -2822,10 +2810,10 @@ p, li { white-space: pre-wrap; }
   <tabstop>rebin_leEWidth</tabstop>
   <tabstop>rebin_leEHigh</tabstop>
   <tabstop>rebin_pbRebin</tabstop>
-  <tabstop>leNameSPE</tabstop>
-  <tabstop>pbBrowseSPE</tabstop>
-  <tabstop>save_ckSPE</tabstop>
-  <tabstop>save_ckNexus</tabstop>
+  <tabstop>leMappingFile</tabstop>
+  <tabstop>pbMappingFileBrowse</tabstop>
+  <tabstop>pbBack_2</tabstop>
+  <tabstop>pbPlotRaw</tabstop>
   <tabstop>cal_leRunNo</tabstop>
   <tabstop>cal_pbPlot</tabstop>
   <tabstop>cal_lePeakMin</tabstop>
@@ -2842,31 +2830,32 @@ p, li { white-space: pre-wrap; }
   <tabstop>cal_leEHigh</tabstop>
   <tabstop>cal_ckPlotResult</tabstop>
   <tabstop>cal_pbCreate</tabstop>
-  <tabstop>pbRun</tabstop>
-  <tabstop>leEGuess</tabstop>
-  <tabstop>leEWidth</tabstop>
-  <tabstop>pbBack</tabstop>
-  <tabstop>map_fileInput_leName</tabstop>
-  <tabstop>leEHigh</tabstop>
-  <tabstop>leELow</tabstop>
-  <tabstop>cbNormal</tabstop>
-  <tabstop>map_fileInput_pbBrowse</tabstop>
-  <tabstop>ckFixEi</tabstop>
-  <tabstop>loadRun_cbInst</tabstop>
+  <tabstop>ckMonEff</tabstop>
+  <tabstop>ckSumFiles</tabstop>
+  <tabstop>cbMappingOptions</tabstop>
+  <tabstop>pbRunFilesBrowse</tabstop>
+  <tabstop>cbReflection</tabstop>
+  <tabstop>leNoGroups</tabstop>
+  <tabstop>ckUseCalib</tabstop>
+  <tabstop>leCalibrationFile</tabstop>
+  <tabstop>leRunFiles</tabstop>
+  <tabstop>pbCalibrationFilesBrowse</tabstop>
+  <tabstop>cbInst</tabstop>
   <tabstop>ckRunDiag</tabstop>
   <tabstop>ckRunAbsol</tabstop>
-  <tabstop>leVanMap</tabstop>
-  <tabstop>pbAbsMapFileBrowse</tabstop>
-  <tabstop>leAbsWhiteFile</tabstop>
-  <tabstop>leAbsMonoFiles</tabstop>
+  <tabstop>leDetailedBalance</tabstop>
+  <tabstop>ckDetailedBalance</tabstop>
+  <tabstop>cbAnalyser</tabstop>
+  <tabstop>ckCleanUp</tabstop>
+  <tabstop>absRunFiles</tabstop>
+  <tabstop>absMapFile</tabstop>
+  <tabstop>absWhiteFile</tabstop>
+  <tabstop>leVanEi</tabstop>
   <tabstop>leVanELow</tabstop>
   <tabstop>leVanEHigh</tabstop>
-  <tabstop>leVanEi</tabstop>
-  <tabstop>leRMMMass</tabstop>
-  <tabstop>leSamMass</tabstop>
   <tabstop>leVanMass</tabstop>
-  <tabstop>pbHelp</tabstop>
-  <tabstop>ckSumSpecs</tabstop>
+  <tabstop>leSamMass</tabstop>
+  <tabstop>leRMMMass</tabstop>
  </tabstops>
  <resources/>
  <connections/>
